spacing issues

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -806,7 +806,7 @@ a:visited
 .casecontent
 {
 	margin: 0;
-	padding: 1em 1em 0 1em;
+	padding: 1em;
 	border: 1px solid #E6F2D8;
 	border-top: none;
 }
